[package]
name = "rsmod-pathfinder"
version = "5.0.4"
edition = "2021"
authors = ["2004Scape"]
description = "A breadth-first search path finder."
license = "ISC"
license-file = "LICENSE.md"
repository = "https://github.com/2004scape/rsmod-pathfinder"
homepage = "https://github.com/2004scape/rsmod-pathfinder#readme"
readme = "README.md"
keywords = [
    "rsmod",
    "pathfinder",
    "bfs",
    "rust",
    "webassembly"
]
categories = ["game-engines", "game-development"]
exclude = [".github", ".run", "package.json", "lumbridge.json", "src/main.*"]

[lib]
crate-type = ["cdylib"]
name = "rsmod"

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
once_cell = "1.20.2"
serde_json = "1.0.132"
rand = "0.8.5"
jni = "0.21.1"

[profile.release]
lto = true
opt-level = 3